--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,20 +1,21 @@
 <!DOCTYPE html>
-
 <html>
-
   <head>
-
      <meta http-equiv="content-type" content="text/html; charset=utf-8" />
-
-      <title>{{ page.title }}</title>
-
+     <title>{{ page.title }}</title>
+     <script src=""></script>
+     <link rel="stylesheet" type="text/css" href="../stylesheets/base.css" />
+     <link rel="stylesheet" type="text/css" href="../stylesheets/layout.css" />
+     <link rel="stylesheet" type="text/css" href="../stylesheets/skeleton.css" />
   </head>
-
   <body>
- 
+    <header>
+      <h1>Jing Xiang's Blog</h1>
+    </header>
+  	<div class="container">
+  	<a class="button four columns">click me</a>
   {{ content }}
-  
+    </div>
   </body>
-
 </html>
 
