--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -10,6 +10,10 @@
      <link rel="stylesheet" type="text/css" href="stylesheets/skeleton.css" />
   </head>
   <body>
+    <header class="header">
+      <a>Jing Xiang's Blog ←_← </a>
+    </header>
+    
     {{ content }} 
   </body>
 </html>
