--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -4,10 +4,10 @@
      <meta http-equiv="content-type" content="text/html; charset=utf-8" />
      <title>{{ page.title }}</title>
      <script src=""></script>
-     <link rel="stylesheet" type="text/css" href="stylesheets/main.css" />
-     <link rel="stylesheet" type="text/css" href="stylesheets/base.css" />
-     <link rel="stylesheet" type="text/css" href="stylesheets/layout.css" />
-     <link rel="stylesheet" type="text/css" href="stylesheets/skeleton.css" />
+     <link rel="stylesheet" type="text/css" href="../../../stylesheets/main.css" />
+     <link rel="stylesheet" type="text/css" href="../../../stylesheets/base.css" />
+     <link rel="stylesheet" type="text/css" href="../../../stylesheets/layout.css" />
+     <link rel="stylesheet" type="text/css" href="../../../stylesheets/skeleton.css" />
   </head>
   <body>
     <header class="header">
