--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -16,7 +16,7 @@
     <div class="content">
       <div class="sidebar">
         <a>
-          <img src="images/logo.png"></img>
+          <img src="../../../images/logo.png"></img>
         </a>
         <p>
           want to contact me?
@@ -26,7 +26,7 @@
       </div>
       <div class="post">
         <b class="author">
-          <img src="images/author.png"></img>
+          <img src="../../../images/author.png"></img>
         </b>
         <h2 class="title" >
           <a>{{ page.title }}</a>
@@ -38,7 +38,7 @@
     </div>
     <div class="copyright">
       <div class="nav">
-        <a class="button">Next Page</a>
+        <a class="button">Next Post</a>
       </div>
       <p>© 2012–2014 </p>
     </div>
