--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -11,7 +11,7 @@
   </head>
   <body>
     <header class="header">
-      <a>Jing Xiang's Blog ←_← </a>
+      <a href="http://winniehajing.github.io/jekyll_demo/">Jing Xiang's Blog </a>
     </header>
     <div class="content">
       <div class="sidebar">
@@ -30,7 +30,7 @@
       <div class="nav">
         <a class="button">Next Page</a>
       </div>
-      <p>© 2012–2014 </p>
+      <p>© 2014 </p>
     </div>
   </body>
 </html>
