--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -11,7 +11,8 @@
   </head>
   <body>
     <header class="header">
-      <a>Jing Xiang's Blog ←_← </a>
+      <a href="http://winniehajing.github.io/jekyll_demo/">← Back To Jing Xiang's Blog</a>
+
     </header>
     <div class="content">
       <div class="sidebar">
